--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,27 +1,30 @@
 {
   "manifest_version": 3,
   "name": "Smart Favorites",
-  "version": "1.0.0",
-  "description": "智能收藏夹管理 - 基于 AI 的收藏夹语义搜索和问答",
+  "version": "1.1.0",
+  "description": "智能收藏夹管理 - 基于 AI 的收藏夹语义搜索和问答，支持侧边栏模式",
   "author": "Smart Favorites Team",
   "permissions": [
     "bookmarks",
     "storage",
-    "activeTab"
+    "activeTab",
+    "sidePanel"
   ],
   "host_permissions": [
     "http://localhost:8000/*",
     "http://127.0.0.1:8000/*"
   ],
+  "side_panel": {
+    "default_path": "sidepanel/sidepanel.html"
+  },
   "action": {
-    "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     },
-    "default_title": "Smart Favorites"
+    "default_title": "Smart Favorites - 点击打开侧边栏"
   },
   "background": {
     "service_worker": "background/background.js",
