--- a/backend/env.example
+++ b/backend/env.example
@@ -48,6 +48,11 @@ EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 # EMBEDDING_PROVIDER=openai
 # EMBEDDING_MODEL=text-embedding-3-small
 
+# Hugging Face Configuration (for better connectivity in China)
+# Uncomment and set to use Hugging Face mirror:
+# HF_ENDPOINT=https://hf-mirror.com
+# Or set environment variable: export HF_ENDPOINT=https://hf-mirror.com
+
 # ChromaDB Configuration
 CHROMA_PERSIST_DIR=./data/chroma
 CHROMA_COLLECTION_NAME=bookmarks
