--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,13 +13,13 @@ chromadb==0.4.22
 sentence-transformers==2.3.1
 
 # LLM SDKs
-openai==1.12.0
+openai>=2.15.0
 anthropic==0.18.1
 google-generativeai==0.3.2
 dashscope==1.14.1
 
 # HTTP Client
-httpx==0.26.0
+httpx>=0.27.0
 aiohttp==3.9.3
 
 # Data Processing
@@ -31,7 +31,8 @@ pydantic-settings==2.1.0
 # Utilities
 python-dotenv==1.0.1
 loguru==0.7.2
+cryptography==42.0.2
 
 # Development
-pytest==8.0.0
+pytest>=7.0.0,<8.0.0
 pytest-asyncio==0.23.4
